serialize access to special_price table when trying to get tokens for an access code